# Saltr

./: Cargo.toml  README.md  passwords.json
src/: genr.rs  main.rs  st_json.rs  viewpasswords.rs
