[package]
name = "pass_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["svg"] }
rand = "0.9.1"
arboard = "3.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }